style.css
:root.light {
    --header-bg-color: #fefefe;
    --btn-bg-color: #1c94d3;
    --btn-tex-color: #fff;
    --btn-hover-color: #1ea0e5;
    --btn-active-color: #1784bf;
    
    --sidebar-bg-color: #1c94d3;
    --text-color: #fff;

    --main-bg-color: #e1e9f0;
    --main-cards-text: #777a7d;
}

* {
    padding: 0;
    margin: 0;
    height: 100%;
    box-sizing: border-box;

    font-size: 14px;
}

body {
    background-color: #615c5c;
    font-family: Arial, Helvetica, sans-serif;
    
}

a {
    text-decoration: none;
    color: inherit;
}

.container {
    width: clamp(350px, 100%, 1200px);
    margin: 0 auto;
    
    display: grid;
    grid-template-rows: auto auto 1fr;
}

.header {
    padding: 15px 20px 15px 20px;
    background-color: var(--header-bg-color);
    box-shadow: 0 3px 8px -4px #898989;

    display: grid;
    gap: 15px;
}

.search-bar {
    display: grid;
    grid-template-columns: 1fr repeat(4, auto);
    gap: 10px;
}

.search {
    display: flex;
}

.search button {
    align-self: center;
}

.search-bar button {
    height: 24px;
    width: auto;
    cursor: pointer;
    background-color: transparent;
    border: none;
}

.search-bar div {
    align-content: center;
}

.user-name p,
.hide-name {
    font-size: 18px;
    font-weight: 600;
    align-content: center;
}

.hide-name {
    display: none;
}

.search-bar button:hover {
    filter: invert(0.5)
}

.search-bar button:active {
    filter: blur(0.8px);
}

#search {
    width: 80%;
    padding: 7px 12px;
    border-radius: 20px;
    margin-left: 16px;

    background-color: var(--main-bg-color);
    border: none;
}

.user-bar {
    display: grid;
    grid-template-columns: auto 1fr repeat(3, auto);
    gap: 10px;
}

.user-avatar {
    height: 46px;
    width: auto;
    align-self: center;
}

.greetings-name {
    min-width: 90px;
    display: grid;
    font-weight: 600;
}

.user-main p {
    display: inline;
}

.user-main a {
    font-size: 18px;
    text-decoration: none;
}

.user-bar button {
    height: 32px;
    padding: 8px 10px;
    border: none;
    align-self: center;
    background-color: var(--btn-bg-color);
    color: var(--btn-tex-color);
    border-radius: 20px;

    cursor: pointer;
}

.user-bar button:hover {
    box-shadow: 0 1px 3px #5a5a5a;
    background-color: var(--btn-hover-color);
}

.user-bar button:active {
    background-color: var(--btn-active-color);

}

.new p,
.upload p, 
.share p {
    display: none;
}

.sidebar {
    padding: 15px 20px;
    background-color: var(--sidebar-bg-color);
    display: flex;
    flex-wrap: wrap;
    gap: 8px;

    position: sticky;
    bottom: 0;
}

.sidebar p {
    font-size: 12px;
}

.title.desktop {
    display: none;
}

.title {
    padding: 15px 20px;
    background-color: var(--sidebar-bg-color);
    display: grid;
    grid-template-columns: auto 1fr;
    gap: 10px;
}

.title h1 {
    font-size: 25px;
    align-content: center;
    color: var(--text-color);
}

.title img {
    height: 38px;
}

.main-icons {
    height: auto;
    display: flex;
    flex-grow: 2;
    justify-content: space-between;
    gap: 10px;
}

.settings {
    height: auto;
    display: flex;
    flex-grow: 1;
    justify-content: space-evenly;
    gap: 10px;
}

.main-icons button,
.settings button {
    height: fit-content;
    color: var(--text-color);
    background-color: transparent;
    border: none;

    cursor: pointer;
}

.main-icons button img {
    height: 24px;
}

.sidebar button:hover {
    filter: invert(0.05)
}

.main-content {
    padding: 25px 20px;
    background-color: var(--main-bg-color);
    z-index: -1;
    grid-row: 3 / 4;

    display: grid;
    grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
    gap: 18px;
    
}

.main-content h2 {
    font-size: 18px;
}

.projects {
    grid-column: 1 / -1;
    display: grid;
    grid-template-rows: auto 1fr;
    gap: 10px;
    align-content: start;
}

.projects .cards {
    display: grid;
    grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
    gap: 28px;
}

.cards > div {
    height: fit-content;
    padding: 25px 18px 25px 25px;
    font-size: 16px;
    background-color: var(--header-bg-color);
    border-radius: 6px;
    box-shadow: 2px 5px 6px -3px #898989,
                inset 7px 0 1px 0 #ffb20c;
}

.cards div h3 {
    font-size: 16px;
}

.cards div p {
    color: var(--main-cards-text);
}

.cards div .buttons {
    padding: 40px 0 0 0;
    display: flex;
    justify-content: flex-end;
    gap: 20px;
}

.cards div button {
    border: none;
    background-color: transparent;
    cursor: pointer;
}

.cards div button:active {
    filter: blur(0.8px);
}

.announcements {
    display: grid;
    gap: 10px;
    align-content: start;
}

.announcements .ann-cards {
    height: fit-content;
    padding: 27px;
    background-color: var(--header-bg-color);
    border-radius: 6px;
    box-shadow: 2px 5px 6px -3px #898989;
}

.ann-cards .ann-top {
    padding-bottom: 12px;
}

.ann-cards .ann-middle {
    padding: 12px 0;
    border-bottom: 1px solid var(--main-cards-text);
    border-top: 1px solid var(--main-cards-text);
}

.ann-cards .ann-last {
    padding-top: 12px;
}

.ann-cards p {
    font-size: 12px;
    color: var(--main-cards-text);
}

.trending {
    display: grid;
    gap: 10px;
    align-content: start;
}

.trend-cards {
    height: fit-content;
    padding: 20px;
    display: grid;
    gap: 20px;
    background-color: var(--header-bg-color);
    border-radius: 6px;
    box-shadow: 2px 5px 6px -3px #898989;
}

.trend-cards > div {
    display: grid;
    grid-template-columns: auto 1fr;
    gap: 20px;
}

.users-avatar + div {
    height: fit-content;
    align-self: center;
    text-decoration: none;
}

.tr-descript {
    color: var(--main-cards-text);
}
.users-avatar {
    height: 40px;
}

@media only screen and (min-width: 858px) {
    .container {
        grid-template-columns: 1fr 4fr;
        grid-template-rows: auto 1fr;
    }

    .mobile {
        display: none;
    }

    .header {
        padding: 20px 50px 20px 30px;

        grid-column: 2 / 3;
        gap: 20px;
    }

    .search-bar {
        gap: 15px;
    }

    .greetings-name {
        min-width: 120px;
    }

    .user-main p,
    .user-main a {
        font-size: 24px;
        font-weight: 700;
    }

    .hide-name {
        display: unset;
    }

    .user-bar button {
        height: fit-content;
        padding: 8px 25px;
    }

    .new p,
    .upload p,
    .share p {
        display: unset;
    }

    .new img,
    .upload img,
    .share img {
        display: none;
    }

    .sidebar {
        padding: 20px 50px 20px 20px;
        display: grid;
        grid-row: 1 / 3;
        grid-template-rows: auto auto 1fr;
        gap: 60px;

    }

    .title.desktop {
        display: grid;
        padding: 0;
    }

    .main-icons, 
    .settings {
        padding-left: 8px;
        display: grid;
        justify-content: start;
        justify-items: start;
        align-content: start;
        gap: 15px;
    }

    .main-icons button,
    .settings button {
        display: grid;
        grid-template-columns: auto auto;
        gap: 15px;
    }

    .title.desktop {
        position: sticky;
        top: 10px;
    }

    .sidebar p {
        font-size: 18px;
        font-weight: 600;
        text-align: left;
        align-content: center;
    }

    .main-icons {
        position: sticky;
        top: calc(10px + 38px + 60px);
    }
    
    .settings {
        position: sticky;
        top: calc(10px + 38px + 60px + 219px + 60px);
        align-self: start;
    }

    .main-content {
        grid-row: 2 / 3;

        grid-template-columns: 3fr 1fr;
        grid-template-rows: auto 1fr;
    }

    .projects {
        grid-column: 1 / 2;
        grid-row: 1 / 3;
    }

    .trending {
        grid-column: 2 / 3;
    }
}

